
	* gtk/gtkdnd.c (gtk_drag_selection_received): Add some sanity
	checks if the widget passed to gtk_drag_get_data() was not the
	dest widget.

2000-02-01  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtkfilesel.c: Use the g_filename_to_utf8 and
	g_filename_from_utf8 functions (which were added a moment ago to
	GLib). Some cleanups: Use gbooleans. Use GStrings instead of fixed
	size buffers.

	* gtk/gtkfilesel.h: Add comment about
	gtk_file_selection_get_filename returning the filename in the C
	runtime's encoding.

	* README.win32
	* gdk/gdk.def
	* gdk/makefile.{cygwin,msc}
	* gtk/gtk.def: Updates.

	* gdk/gdkcursor-win32.c: Initialise refcount.

2000-01-31  Yuan-Chung Cheng <platin@linux.org.tw>

        * configure.in: Added "zh_CN.GB2312" to ALL_LINGUAS.

2000-01-30  Havoc Pennington  <hp@pobox.com>

	* gtk/testgtk.c (set_cursor): use gdk_cursor_unref instead of
	destroy

	* gdk/gdkimage.c (gdk_image_ref): image wasn't being returned

	* gdk/gdkprivate.h: declare _gdk_cursor_destroy which is then 
	implemented in platform-specific code

	* gdk/Makefile.am (gdk_c_sources): add gdkcursor.c

	* gdk/x11/gdkcursor-x11.c (gdk_cursor_destroy): rename with an
	underscore in front

	* gdk/win32/gdkcursor-win32.c (gdk_cursor_destroy):
	put an underscore in front

	* gdk/gdkcursor.c: new file, implements
	gdk_cursor_ref/gdk_cursor_unref

	* gdk/gdkcursor.h: Refcount GdkCursor

	* gdk/gdkcompat.h (gdk_cursor_destroy): compat

2000-01-29  Tor Lillqvist  <tml@iki.fi>

	* gdk/gdkwindow.h
	* gdk/gdkpixmap.h: Remove prototypes for renamed functions.

Tue Jan 25 11:43:21 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkinvisible.h (struct _GtkInvisible[Class]): Fix
	structures to properly inherit from GtkWidget not GtkBin.

Sun Jan 23 20:28:24 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk+.spec.in: Added lib/gtk+/include/* to %files
	(bug #5178 - Peter Wainright)
	
	* gtk/Makefile.am (gtk_public_h_sources): Add gtkcompat.h
	so that it will be installed.